# deckmasterGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: delete_me_after_settings_aspect_ratio.h  main.cpp  mainwindow.cpp  mainwindow.h
src/ui/: aspectratiowidget.cpp  aspectratiowidget.h  squarebutton.cpp  squarebutton.h
ui/: mainwindow.ui
